# vectorized_batchpir

./: .gitmodules  CMakeLists.txt
header/: BatchPIRClient.h  BatchPIRParams.h  BatchPIRServer.h  BlockPIR.h  PIRClient.h  PIRParams.h  PIRServer.h  batchpirclient.h  batchpirparams.h  batchpirserver.h  client.h  pirparams.h  server.h  utils.h
src/: batchpirclient.cpp  batchpirserver.cpp  block_PIR.h  main.cpp  server.cpp  utils.h
